k8s/apps/media/audiobookshelf/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
spec:
  type: ClusterIP
  selector:
    app: audiobookshelf
  ports:
    - name: web
      port: 80
      targetPort: http
